搭建jfinal框架